card wrap fix

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 /*Global styles*/
 * {
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: "Roboto Mono";
+  font-family: 'Roboto Mono';
   font-size: 18px;
 }
 
@@ -24,7 +24,7 @@ body {
 
 .brand-title {
   font-size: 1.5rem;
-  margin: .5rem;
+  margin-left: 3rem;
 }
 
 .navbar-links {
@@ -54,7 +54,7 @@ body {
 
 .toggle-button {
   position: absolute;
-  top: .75rem;
+  top: 0.75rem;
   right: 1rem;
   display: none;
   flex-direction: column;
@@ -97,7 +97,7 @@ body {
   }
 
   .navbar-links ul li a {
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
   }
 
   .navbar-links.active {
@@ -110,7 +110,7 @@ body {
   height: 100vh;
   width: 100%;
   background: linear-gradient(rgba(0, 0, 0, 0.342), rgba(0, 0, 0, 0.342)),
-    url("./img/landing.jpeg") no-repeat center bottom / cover;
+    url('./img/landing.jpeg') no-repeat center bottom / cover;
   color: whitesmoke;
 }
 
@@ -162,12 +162,11 @@ body {
   background: #fff;
   padding: 25px;
   border-radius: 5px;
-
 }
 
 .wrapper h2 {
-  text-align: center;
   margin-bottom: 20px;
+  margin-left: 1rem;
   text-transform: uppercase;
   letter-spacing: 3px;
   color: #332902;
@@ -177,10 +176,17 @@ body {
   margin-bottom: 10px;
 }
 
-.wrapper .input_field input[type="text"],
+form {
+  width: 60%;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.wrapper .input_field input[type='text'],
 .wrapper textarea {
   border: 1px solid #e0e0e0;
   width: 100%;
+  max-width: 100%;
   padding: 10px;
 }
 
@@ -189,7 +195,7 @@ body {
   height: 80px;
 }
 
-.wrapper .btn input[type="submit"] {
+.wrapper .btn input[type='submit'] {
   border: 0px;
   margin-top: 15px;
   padding: 10px;
@@ -213,10 +219,14 @@ body {
   transition: all 0.5s ease;
 }
 
+.contact-container {
+  display: flex;
+  justify-content: space-between;
+}
 /*footer*/
 .footer {
   padding: 4rem 2rem 3rem;
-  background-color: #2C3034;
+  background-color: #2c3034;
 }
 
 .footer-copyRight {
@@ -228,13 +238,16 @@ body {
   font-size: var(--small-font);
   border-top: 2px solid var(--text-color-light);
   color: rgba(255, 255, 255, 0.8);
-  ;
 }
 
 /* Arrival list--------------------------- */
 .arrivals-pg {
   width: 100%;
-  height: 90vh;
+  height: 130vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  display: flex;
 }
 
 .arrival-list {
@@ -267,12 +280,16 @@ body {
   color: white;
   transition: 0.3s;
 }
+.container-arrival {
+  display: block;
+}
 
 .image-selection {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  max-width: 2;
 }
 
 .image-selection .card {
@@ -302,5 +319,50 @@ h4 {
 @media only screen and (max-width: 600px) {
   .arrivals-pg .filter-button {
     margin-bottom: 0.5rem;
+  }
+}
+
+@media screen and (max-width: 995px) {
+  .contact-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  form {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 1328px) {
+  .arrivals-pg {
+    width: 100%;
+    height: 90vh;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+  }
+  .image-selection {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    max-width: 200%;
+    margin-bottom: 5rem;
+  }
+  .arrivals-pg .filter-button {
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 5rem;
+  }
+
+  .filter-button:hover {
+    background-color: black;
+    color: white;
+    transition: 0.3s;
   }
 }
